<resources>
    <string name="app_name">Read</string>
    <string name="about_this_book"><u>About this book</u></string>
    <string name="hello_blank_fragment">Blank Fragment</string>
    <string name="download_book_then_open">Download this book then open it</string>
    <string name="already_download_book">This book already downloaded open it</string>
    <string name="error_occurred">Error occurred. Please try again</string>
    <string name="please_wait">Please wait</string>
    <string name="done">Done</string>
    <string name="search">Search</string>
    <string name="all">All</string>
    <string name="poem">Poem</string>
    <string name="gazelles">Gazelles</string>
    <string name="hamsa">Hamsa</string>
    <string name="download">Download</string>
    <string name="read">Read</string>
    <string name="whole_library_title">The Whole Library In Your Phone</string>
    <string name="whole_library_descr">Here you can find any book you want</string>
    <string name="download_books_title">Download Books</string>
    <string name="download_books_descr">You can easily download books. And then read with this app</string>
    <string name="works_in_offline_title">Works In Offline</string>
    <string name="works_in_offline_descr">No need to worry about internet connection. This app was created to work offline</string>
</resources>